--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   "author": "Samus",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.22"
+    "mysql": "^2.18.1"
   },
   "description": ""
 }
