--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "netlify deploy --prod"
+    "build": "netlify deploy --prod"
   },
   "author": "Samus",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "netlify-cli": "^14.2.1",
     "netlify-lambda": "^2.0.16",
     "serverless-http": "^3.2.0"
   },
