--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Samus",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "netlify-cli": "^14.2.1",
