--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,8 @@
   from = "/*"
   to = "/index.html"
   status = 200
+  force = true
+  headers = {X-From = "Netlify"}
 
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
