--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "serverapi",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "netlify deploy --prod"
   },
-  "author": "Samus",
+  "author": "Zas",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
